# player

./: AUTHORS  CMakeLists.txt  INSTALL  NEWS  Project.ede  README  README.md
include/: Project.ede  data.h  data.hpp  decode.h  decode.hpp  interface.h  interface.hpp  log.hpp  misc.hpp  ncurses_wrapper.hpp  options.hpp  play.h  play.hpp  playlist.hpp
src/: CMakeLists.txt  Project.ede  data.cpp  decode.cpp  interface.cpp  log.cpp  main.cpp  play.cpp  playlist.cpp
